Fix popup iframe display on iOS
git-svn-id: http://plugins.svn.wordpress.org/amberlink/trunk@1501480 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/amber/css/amber.css
+++ b/amber/css/amber.css
@@ -74,6 +74,7 @@
   width: 230px;
   margin: 0 auto;
   background-color: white;
+  overflow: hidden;
 }
 
 .amber-iframe-container > a {
